--/--/-- kain88-de, richardjgowers

  * 0.xx.x

API Changes

  * XYZWriter can now be used as a container format for different protein models
    as well as a normal trajectory. If `n_atoms` is None (default) MDAnalysis
    assumes that it is used as a container and won't give a warning if the
    number of atoms differs between frames.

Enhancement

  * GRO file reading approximately 50% faster for large files (Issue #212)

Changes

Fixes
  * Fixed analysis.density modules requiring the defunct `skip` attribute
    on trajectories. (Issue #489)

10/08/15

  * 0.12.1 kain88-de, orbeckst, richardjgowers

API Changes

Enhancements

Changes

Fixes
  * Fixed OpenMP detection on Linux/OSX #459
  * Fixed reading of LAMMPS trajectory times: default unit ought
    to be fs and not ps
  * Fixed setting of dt for DCDReader (and LAMMPS DCDReader) with
    keyword argument Universe(..., dt=<dt>)
  * Fixed a bug in topology.core.guess_atom_element where a
    single digit atom name would raise an IndexError (#476)
  * Fixed numpy -> np in LeafletFinder

10/04/15 kain88-de, richardjgowers, dotsdl, sseyler, orbeckst, jbarnoud

  * 0.12.0

API Changes

  * PrimitivePDBReader now imports occupancies into the `TimeStep` object.
    (Issue #396)
  * Atoms without a Universe now return NoDataError instead of
    AttributeError
  * AtomGroups of zero length or containing Atoms with no Universe raise
    a NoDataError when trying to access Universe
  * Atoms now keep a strong reference to Universe, meaning they
    do not become orphaned when the Universe goes out of scope (Issue #297)

Enhancements

  * `Atom` and `AtomGroup` now expose occupancy value as `occupancy` and
    `occupancies` properties (Issue #396)
  * XYZReader now supports frame indexing (Issue #428)
  * Reader objects can now be sliced using lists and arrays of indices
    (Issue #437)
  * `PSAnalysis` now includes Hausdorff pairs analysis and associated nearest
    neighbor plotting method (Issue #438)